[workspace]
members = [
    "crates/rbp-core",
    "crates/rbp-messaging/rbp-messaging-types",
    "crates/rbp-messaging/rbp-messaging-pulsar",
    "crates/rbp-ddd",
]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
async-trait = "0.1"

#日志
env_logger = "0.10"
log = "0.4"

# url
url = "2"

# 错误处理
thiserror = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# 时间
time = { version = "0.3", features = ["serde-well-known", "macros"] }

# 异步运行时
tokio = { version = "1", features = [
    "time",
    "net",
    "sync",
    "rt",
    "rt-multi-thread",
] }
async-std = { version = "1" }

# 消息队列中间件
pulsar = { version = "6" }
