[workspace]
members = [
    "crates/rbp-components/rbp-id-generation",
    "crates/rbp-components/rbp-serialization",
    "crates/rbp-components/rbp-async-runtime",
    "crates/rbp-core",
    "crates/rbp-messaging/rbp-messaging-types",
    "crates/rbp-messaging/rbp-messaging-pulsar",
    "crates/rbp-servicebus/rbp-servicebus-core",
    "crates/rbp-ddd",
]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
async-trait = "0.1"

bytes = {version = "1"}

#日志
env_logger = "0.10"
log = "0.4"

# url
url = "2"

# 错误处理
thiserror = "1"

# protobuffer
prost = { version = "0.12" }

# 序列化
serde = { version = "1" }
serde_json = { version = "1.0.108" }

# 时间
time = { version = "0.3" }
chrono = { version = "0.4" }

# 异步运行时
tokio = { version = "1" }
async-std = { version = "1" }

# 消息队列中间件
pulsar = { version = "6" }

# 主键生成
uuid = { version = "1.6"}
ulid = { version = "1"}

rbp-serialization = { path = "crates/rbp-components/rbp-serialization"}
rbp-core = { path = "crates/rbp-core" }
rbp-async-runtime = { path = "crates/rbp-components/rbp-async-runtime" }
rbp-messaging-types = { path = "crates/rbp-messaging/rbp-messaging-types" }
rbp-messaging-pulsar = { path = "crates/rbp-messaging/rbp-messaging-pulsar" }
