[package]
name = "rbp-id-generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["uuid", "ulid"]
uuid = []
ulid = []

[dependencies]
uuid = { workspace = true }
ulid = { workspace = true }
