[package]
name = "rbp-serialization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]
serialization-prost = []
serialization-json = []
full = ["serialization-prost", "serialization-json"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prost = { workspace = true }
