[package]
name = "rbp-messaging-pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tokio-runtime = ["pulsar/tokio-runtime"]
async-std-runtime = []

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true }

pulsar = { workspace = true }
